<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.moviedetails.MovieDetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top_appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_appbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_appbar_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_backdrop"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/cd_movie_backdrop"
                app:layout_constraintDimensionRatio="16:9"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="780dp" />

            <TextView
                android:id="@+id/tv_combine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guideline_begin"
                app:layout_constraintTop_toBottomOf="@id/img_backdrop"
                tools:text="12/05/2023 | EN | 5.1 |" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/TextAppearance.Material3.HeadlineSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_begin"
                app:layout_constraintTop_toBottomOf="@id/tv_combine"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/tv_overview"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_begin"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/lbl_genres"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/genre"
                android:textColor="?attr/colorPrimary"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_begin"
                app:layout_constraintTop_toBottomOf="@id/tv_overview" />

            <TextView
                android:id="@+id/tv_genres"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_begin"
                app:layout_constraintTop_toBottomOf="@id/lbl_genres"
                tools:text="@tools:sample/lorem" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_begin"
                app:layout_constraintTop_toBottomOf="@id/tv_genres" />

            <TextView
                android:id="@+id/lbl_status"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/status"
                android:textColor="?attr/colorPrimary"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_begin"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <TextView
                android:id="@+id/tv_status"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_begin"
                app:layout_constraintTop_toBottomOf="@id/lbl_status"
                tools:text="@tools:sample/lorem" />

            <View
                android:id="@+id/divider1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_begin"
                app:layout_constraintTop_toBottomOf="@id/tv_status" />

            <TextView
                android:id="@+id/lbl_runtime"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/runtime"
                android:textColor="?attr/colorPrimary"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_begin"
                app:layout_constraintTop_toBottomOf="@id/divider1" />

            <TextView
                android:id="@+id/tv_runtime"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_begin"
                app:layout_constraintTop_toBottomOf="@id/lbl_runtime"
                tools:text="@tools:sample/lorem" />

            <View
                android:id="@+id/divider2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_begin"
                app:layout_constraintTop_toBottomOf="@id/tv_runtime" />

            <TextView
                android:id="@+id/lbl_revenue"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/revenue"
                android:textColor="?attr/colorPrimary"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_begin"
                app:layout_constraintTop_toBottomOf="@id/divider2" />

            <TextView
                android:id="@+id/tv_revenue"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_begin"
                app:layout_constraintTop_toBottomOf="@id/lbl_revenue"
                tools:text="@tools:sample/lorem" />

            <View
                android:id="@+id/divider3"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_begin"
                app:layout_constraintTop_toBottomOf="@id/tv_revenue" />

            <TextView
                android:id="@+id/lbl_popularity"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/popularity"
                android:textColor="?attr/colorPrimary"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_begin"
                app:layout_constraintTop_toBottomOf="@id/divider3" />

            <TextView
                android:id="@+id/tv_popularity"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_begin"
                app:layout_constraintTop_toBottomOf="@id/lbl_popularity"
                tools:text="@tools:sample/lorem" />

            <Button
                android:id="@+id/btn_play_trailer"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/play_trailer"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_begin"
                app:layout_constraintTop_toBottomOf="@id/tv_popularity"
                app:layout_constraintWidth_max="488dp" />

            <Button
                android:id="@+id/btn_show_review"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/reviews"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_begin"
                app:layout_constraintTop_toBottomOf="@id/btn_play_trailer"
                app:layout_constraintWidth_max="488dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_begin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="20dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loading_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>